# tess-case-studies

./: .gitignore  404.html  LICENSE  Makefile  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: README.md
src/casestudies/: run_nb.py
